[package]
name = "velvet-minecraft"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["fs"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
iced = { version = "0.13", features = [
    "image",
    "tokio",
] }
iced_native = "0.10"
image = { version = "0.24", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
home = "0.5"
rfd = "0.15"
sha1 = { version = "0.10.6", features = ["asm"] }
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
