[package]
name = "velvet-minecraft"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
reqwest = { version = "0.13", features = ["json"] }
iced = { version = "0.14", features = [
    "image",
    "tokio",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
home = "0.5"
rfd = "0.16"
sha1 = { version = "0.10.6", features = ["asm"] }
hex = "0.4.3"
tokio = { version = "1.48", features = ["fs", "io-util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
